# mesos-etcd-module

./: .gitignore  Makefile.am  README.md  configure.ac  etcd_contender.json  etcd_module.json  etcd_module.json.sample
contender/: etcd_contender.cpp
patch-on-1.0.x/include/mesos/etcd/: client.hpp
patch-on-1.0.x/include/mesos/log/: log.hpp
patch-on-1.0.x/src/: Makefile.am
patch-on-1.0.x/src/etcd/: client.cpp
patch-on-1.0.x/src/log/: log.cpp  log.hpp  network.cpp  network.hpp
patch-on-1.0.x/src/master/: main.cpp
src/: client.cpp  client.hpp  etcd_module.cpp  url.cpp  url.hpp
src/contender/: contender.cpp  contender.hpp  etcd.cpp  etcd.hpp
src/detector/: detector.cpp  detector.hpp  etcd.cpp  etcd.hpp
src/network/: network.cpp  network.hpp
src/pid_group/: pid_group.cpp  pid_group.hpp
tests/: etcd_tests.cpp  etcd_tests.sh  main.cpp
